--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash.concat": "^4.0.0",
+    "lodash.drop": "^4.1.0",
     "lodash.first": "2",
     "lodash.flatmap": "^4.3.0",
     "lodash.uniq": "^4.0.2",
