--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,35 @@
 {
   "enabled": true,
-  "extends": ["github>SocialGouv/renovate-config:light"]
+  "extends": [
+    "config:semverAllMonthly",
+    ":masterIssue",
+    ":semanticCommits",
+    ":timezone(Europe/Paris)",
+    "group:allNonMajor"
+  ],
+  "masterIssueAutoclose": true,
+  "separateMinorPatch": true,
+  "patch": {
+    "automerge": true,
+    "schedule": ["earlyMondays"]
+  },
+  "node": {
+    "supportPolicy": ["lts_latest"]
+  },
+  "packageRules": [
+    {
+      "groupName": "SocialGouv",
+      "packagePatterns": ["^@socialgouv/"]
+    },
+    {
+      "datasources": ["docker"],
+      "packagePatterns": [
+        "^registry.gitlab.factory.social.gouv.fr/socialgouv/docker/"
+      ],
+      "groupName": "socialgouv/docker images"
+    }
+  ],
+  "postUpdateOptions": ["npmDedupe", "yarnDedupeHighest"],
+  "rangeStrategy": "bump",
+  "labels": ["dependencies"]
 }
