--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,7 +11,7 @@
   "separateMinorPatch": true,
   "patch": {
     "automerge": true,
-    "schedule": ["earlyMondays"]
+    "extends": ["schedule:earlyMondays"]
   },
   "node": {
     "supportPolicy": ["lts_latest"]
