--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lodash.concat": "^4.0.0",
+    "lodash.debounce": "4.0.1",
     "lodash.drop": "^4.1.1",
     "lodash.first": "2",
     "lodash.flatmap": "^4.3.0",
