add  add object.assign@3

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.isequal": "2.3.0",
     "lodash.merge": "4.6.2",
     "lodash.uniq": "^4.0.2",
-    "next": "8"
+    "next": "8",
+    "object.assign": "3"
   }
 }
