--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,9 @@
 {
   "enabled": true,
   "extends": [
-    "config:semverAllMonthly",
+    ":preserveSemverRanges",
+    "schedule:monthly",
+    ":maintainLockFilesMonthly",
     ":masterIssue",
     ":semanticCommits",
     ":timezone(Europe/Paris)",
@@ -31,5 +33,9 @@
   ],
   "postUpdateOptions": ["npmDedupe", "yarnDedupeHighest"],
   "rangeStrategy": "bump",
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "lockFileMaintenance": {
+    "extends": ["group:all"],
+    "commitMessageAction": "Update"
+  }
 }
