--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,7 +7,8 @@
     ":masterIssue",
     ":semanticCommits",
     ":timezone(Europe/Paris)",
-    "group:allNonMajor"
+    "group:allNonMajor",
+    ":separateMajorReleases"
   ],
   "masterIssueAutoclose": true,
   "separateMinorPatch": true,
