--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -30,6 +30,14 @@
         "^registry.gitlab.factory.social.gouv.fr/socialgouv/docker/"
       ],
       "groupName": "socialgouv/docker images"
+    },
+    {
+      "groupName": "all-patch",
+      "packagePatterns": ["*"],
+      "patch": {
+        "groupName": "all patch dependencies",
+        "groupSlug": "all-patch"
+      }
     }
   ],
   "postUpdateOptions": ["npmDedupe", "yarnDedupeHighest"],
