--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "echo YOLO"
   },
   "dependencies": {
+    "@socialgouv/contributions-data": "1.27.0",
+    "@socialgouv/datafiller-data": "1.23.0",
+    "final-form": "4.19.1",
     "lodash.concat": "^4.0.0",
     "lodash.debounce": "4.0.8",
     "lodash.drop": "^4.1.1",
@@ -20,5 +23,8 @@
     "lodash.uniq": "^4.0.2",
     "next": "8",
     "object.assign": "3"
+  },
+  "devDependencies": {
+    "@socialgouv/eslint-config-react": "0.25.0"
   }
 }
