--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,23 +14,10 @@
       "updateTypes": ["minor", "patch"]
     },
     {
-      "excludePackagePatterns": ["^@socialgouv/.*-(data|vdd)$"],
-      "schedule": ["every weekend"],
-      "updateTypes": ["patch"],
-      "groupName": "patch-dependencies",
-      "automergeType": "branch",
-      "automerge": true
-    },
-    {
-      "depTypeList": ["devDependencies"],
-      "schedule": ["before 6am on the first day of the month"],
-      "groupName": "dev-dependencies"
-    },
-    {
-      "depTypeList": ["dependencies"],
-      "excludePackagePatterns": ["^@socialgouv/.*-(data|vdd)$"],
-      "schedule": ["before 6am on the first day of the month"],
-      "groupName": "dependencies"
+      "excludePackagePatterns": ["^@socialgouv/.*-(data|vdd)$"], 
+      "minor": {
+        "groupName": "all non-major dependencies"
+      }
     }
   ]
 }
