--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test": "echo YOLO"
   },
   "dependencies": {
-    "@reach/dialog": "0.10.5",
-    "@reach/tooltip": "0.10.5",
-    "@socialgouv/contributions-data": "1.38.0",
-    "@socialgouv/datafiller-data": "1.78.0",
+    "@next/bundle-analyzer": "^9.5.5",
+    "@reach/dialog": "0.10.2",
+    "@reach/tooltip": "0.10.2",
+    "@socialgouv/contributions-data": "1.27.0",
+    "@socialgouv/datafiller-data": "1.23.0",
     "final-form": "4.19.1",
     "lodash.concat": "^4.0.0",
     "lodash.debounce": "4.0.8",
@@ -24,7 +25,14 @@
     "lodash.merge": "4.6.2",
     "lodash.uniq": "^4.0.2",
     "next": "8",
-    "object.assign": "3"
+    "object.assign": "3",
+    "react": "^16.13.1",
+    "react-dom": "^17.0.1",
+    "remark": "^12.0.1",
+    "remark-html": "^12.0.0",
+    "remark-parse": "^8.0.3",
+    "remark-rehype": "^7.0.0",
+    "strip-markdown": "^3.1.2"
   },
   "devDependencies": {
     "@socialgouv/eslint-config-react": "0.25.0"
