--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,7 +11,7 @@
       "updateTypes": ["major"]
     },
     {
-      "packagePatterns": [ "react", "react-dom", "react-test-renderer" ],
+      "packagePatterns": [ "^react", "react-dom", "react-test-renderer" ],
       "groupName": "react",
       "updateTypes": ["major"]
     },
