--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,7 +26,7 @@
       "updateTypes": ["major"]
     },
     {
-      "packagePatterns": [ "reach" ],
+      "packagePatterns": [ "@reach" ],
       "groupName": "@reach",
       "updateTypes": ["major"]
     },
